WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48856
Invalidate the NPRemoteObjectMap
https://bugs.webkit.org/show_bug.cgi?id=48856
Summary
Invalidate the NPRemoteObjectMap
Anders Carlsson
Reported
2010-11-02 11:27:05 PDT
Invalidate the NPRemoteObjectMap
Attachments
Patch
(6.66 KB, patch)
2010-11-02 11:31 PDT
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-02 11:31:19 PDT
Created
attachment 72705
[details]
Patch
Anders Carlsson
Comment 2
2010-11-02 11:39:32 PDT
Committed
r71140
: <
http://trac.webkit.org/changeset/71140
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug