Invalidate the NPRemoteObjectMap https://bugs.webkit.org/show_bug.cgi?id=48856

Reviewed by John Sullivan.

* Shared/Plugins/NPObjectMessageReceiver.cpp:
(WebKit::NPObjectMessageReceiver::~NPObjectMessageReceiver):
Remove FIXME. The NPRemoteObjectMap always outlives the NPObjectMessageReceiver.

* Shared/Plugins/NPObjectProxy.cpp:
(WebKit::NPObjectProxy::~NPObjectProxy):
Call npObjectProxyDestroyed here.

(WebKit::NPObjectProxy::invalidate):
Null out m_npRemoteObjectMap.

* Shared/Plugins/NPRemoteObjectMap.cpp:
(WebKit::NPRemoteObjectMap::~NPRemoteObjectMap):
Add assertions.

(WebKit::NPRemoteObjectMap::createNPObjectProxy):
Keep track of the NPObjectProxy by adding it to the m_npObjectProxies set.

(WebKit::NPRemoteObjectMap::npObjectProxyDestroyed):
Remove the NPObjectProxy from the m_npObjectProxies set.

(WebKit::NPRemoteObjectMap::invalidate):
Delete all NPObjectMessageReceivers. Iterate over all NPObjectProxy objects and invalidate them.

Canonical link: https://commits.webkit.org/61636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71140 268f45cc-cd09-0410-ab3c-d52691b4dbfc