WebKit2/Shared/Plugins/NPRemoteObjectMap.cpp
@@ -53,11 +53,25 @@ NPRemoteObjectMap::NPRemoteObjectMap(CoreIPC::Connection* connection)
 
 NPRemoteObjectMap::~NPRemoteObjectMap()
 {
+    ASSERT(m_npObjectProxies.isEmpty());
+    ASSERT(m_registeredNPObjects.isEmpty());
 }
 
 NPObject* NPRemoteObjectMap::createNPObjectProxy(uint64_t remoteObjectID)
 {
-    return NPObjectProxy::create(this, remoteObjectID);
+    NPObjectProxy* npObjectProxy = NPObjectProxy::create(this, remoteObjectID);
+
+    m_npObjectProxies.add(npObjectProxy);
+
+    return npObjectProxy;
+}
+
+void NPRemoteObjectMap::npObjectProxyDestroyed(NPObject* npObject)
+{
+    ASSERT(NPObjectProxy::isNPObjectProxy(npObject));
+    ASSERT(m_npObjectProxies.contains(npObject));
+
+    m_npObjectProxies.remove(npObject);
 }
 
 uint64_t NPRemoteObjectMap::registerNPObject(NPObject* npObject)
@@ -118,8 +132,17 @@ NPVariant NPRemoteObjectMap::npVariantDataToNPVariant(const NPVariantData& npVar
 
 void NPRemoteObjectMap::invalidate()
 {
-    // FIXME: Invalidate NPObjectProxy and NPObjectMessageReceiver objects.
-    notImplemented();
+    Vector<NPObjectMessageReceiver*> messageReceivers;
+    copyValuesToVector(m_registeredNPObjects, messageReceivers);
+
+    // Now delete all the receivers.
+    deleteAllValues(messageReceivers);
+
+    ASSERT(m_registeredNPObjects.isEmpty());
+
+    for (HashSet<NPObject*>::const_iterator it = m_npObjectProxies.begin(), end = m_npObjectProxies.end(); it != end; ++it)
+        NPObjectProxy::toNPObjectProxy(*it)->invalidate();
+    m_npObjectProxies.clear();
 }
 
 CoreIPC::SyncReplyMode NPRemoteObjectMap::didReceiveSyncMessage(CoreIPC::Connection* connection, CoreIPC::MessageID messageID, CoreIPC::ArgumentDecoder* arguments, CoreIPC::ArgumentEncoder* reply)
