WebKit2/Shared/Plugins/NPRemoteObjectMap.h
@@ -31,6 +31,7 @@
 #include "Connection.h"
 #include <WebCore/npruntime.h>
 #include <wtf/HashMap.h>
+#include <wtf/HashSet.h>
 #include <wtf/RefCounted.h>
 
 namespace WebKit {
@@ -46,6 +47,7 @@ public:
 
     // Creates an NPObjectProxy wrapper for the remote object with the given remote object ID.
     NPObject* createNPObjectProxy(uint64_t remoteObjectID);
+    void npObjectProxyDestroyed(NPObject*);
 
     // Expose the given NPObject as a remote object. Returns the objectID.
     uint64_t registerNPObject(NPObject*);
@@ -70,6 +72,9 @@ private:
     // A map of NPObjectMessageReceiver classes, wrapping objects that we export to the
     // other end of the connection.
     HashMap<uint64_t, NPObjectMessageReceiver*> m_registeredNPObjects;
+
+    // A set of NPObjectProxy objects associated with this map.
+    HashSet<NPObject*> m_npObjectProxies;
 };
 
 } // namespace WebKit
